--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
     <img id="mainImg" class="mx-auto d-block img-fluid" src="assets/mainpic_cover.png" alt="Uma foto do Luis e da Mari"/>
   </div>
 
-  <!-- _____________________________ OS NOIVOS _____________________________ -->
+  <!-- _____________________________ SECTION 1 _____________________________ -->
 
   <div class="container-fluid px-5 py-5" id="sobreNos">
 
@@ -73,7 +73,7 @@
 
   </div>
 
-  <!-- __________________________________ O CASAMENTO __________________________________ -->
+  <!-- __________________________________ SECTION 2 __________________________________ -->
 
   <div class="container-fluid px-5" id="oCasamento">
 
@@ -116,7 +116,7 @@
 
   </div>
 
-  <!-- _____________________________ LISTA DE PRESENTES _____________________________ -->
+  <!-- _____________________________ SECTION 3 _____________________________ -->
   <div class="container-fluid px-5 py-5" id="listaPresentes">
 
     <h1 class="pt-5 pl-5">Lista de Presentes</h1>
