--- a/home.html
+++ b/home.html
@@ -18,6 +18,9 @@
   </head>
 
   <body>
+
+
+
     <div id="main-container" class="cover-container p-0 m-0">
 
       <!-- navigation -->
@@ -42,7 +45,7 @@
       </div>
     </div>
 
-  <div>
+  <div id="cover">
     <!-- _____________________________ COVER IMAGE _____________________________ -->
     <img id="mainImg" class="mx-auto d-block img-fluid" src="assets/mainpic_cover.png" alt="Uma foto do Luis e da Mari"/>
   </div>
@@ -71,7 +74,7 @@
     </div>
   </div>
 
-  </div>
+
 
   <!-- __________________________________ SECTION 2 __________________________________ -->
 
@@ -134,6 +137,8 @@
 
       </div>
 
+
+
       <!-- _____________________________ FOOTER _____________________________ -->
       <div id="footer" class="pt-5 pb-2 pad">
         <span id="span-footer" class="text-center text-small sans-bold p-3 mx-auto d-block bkg">Copyright 2018, Mariana e Luis</span>
@@ -143,7 +148,7 @@
 
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-      <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+      <!-- <script src="node_modules/popper.js/dist/umd/popper.min.js"></script> -->
       <script src="dist/js/bootstrap.min.js"></script>
 
     </body>
