fixed some bugs for bigger screens

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
 
   <div id="cover">
     <!-- _____________________________ COVER IMAGE _____________________________ -->
-    <img id="mainImg" class="mx-auto d-block img-fluid" src="assets/mainpic_cover.png" alt="Uma foto do Luis e da Mari"/>
+      <img id="mainCover" class="mx-auto d-block img-fluid" src="assets/mainpic_2.gif" alt="Uma foto do Luis e da Mari"/>
   </div>
 
   <!-- _____________________________ SECTION 1 _____________________________ -->
