--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
     <h1 class="pt-5 pb-2 pl-5">Os Noivos</h1>
     <div class="row align-self-center px-5">
       <div class="col-md-7 ml-md-auto align-self-center pl-5">
-        <p class="sans">
+        <p class="">
           Nos conhecemos no Rambla em 2015, em uma das comemorações de formatura da turma do Luis e
           não demorou muito para começarmos a namorar. Em menos de um ano de namoro, nosso primeiro desafio:
           manter nosso relacionamento à distância. Enquanto o Luis se aventurava em Dublin, a
@@ -65,7 +65,7 @@
 
   <!-- __________________________________ SECTION 2 __________________________________ -->
 
-  <div class="section container-fluid px-5 sans-bold" id="oCasamento">
+  <div class="section container-fluid px-5" id="oCasamento">
 
     <h1 class="mb-0 mt-5 pt-5 pb-3 pl-5 bkg">O Casamento</h1>
     <div class="row pt-5 text-center bkg mx-0 px-4">
@@ -74,14 +74,14 @@
         <img class="icon pb-3" src="assets/icons/church.png" alt="Icone igreja"/>
         <h4 class="sans-h py-3">Cerimônia 16:30</h4>
         <p><span class="sans-bold">Igreja Sagrada Família</span><br />
-          <span class="text-small sans">Rua José do Patrocínio, 954 - Cidade Baixa</span></p>
+          <span class="sans">Rua José do Patrocínio, 954 - Cidade Baixa</span></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/glass.png" alt="Icone taças"/>
         <h4 class="sans-h py-3">Recepção 18:00</h4>
         <p><span class="sans-bold">Sociedade de Engenharia do RS</span><br />
-          <span class="text-small sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span></p>
+          <span class="sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
     </div>
@@ -91,14 +91,14 @@
         <img class="icon py-3" src="assets/icons/hat.png" alt="Icone chapéu"/>
         <h4 class="sans-h py-3">Dress Code</h4>
         <p><span class="sans-bold">Traje Social ou Passeio Completo</span><br />
-          <span class="text-small sans">Terno e gravata para os homens e vestidos de<br /> tecidos mais nobres para as mulheres</span></p>
+          <span class="sans">Terno e gravata para os homens e vestidos de<br /> tecidos mais nobres para as mulheres</span></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
         <img class="icon py-3" src="assets/icons/letter.png" alt="Icone carta"/>
         <h4 class="sans-h py-3">Confirmação de Presença</h4>
         <p class="sans-bold">Até 28 de Fevereiro</br>
-          <span class="text-small sans">A confirmação de presença será até o dia 28/02/2019.<br />
+          <span class="sans">A confirmação de presença será até o dia 28/02/2019.<br />
             Confirmações através do email xxxx@xxxx.xxx</span></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
@@ -112,10 +112,10 @@
     <h1 class="pt-5 pl-5">Lista de Presentes</h1>
     <div class="row px-5 py-4">
       <div class="col-md-6 ml-md-auto align-self-center pl-5">
-        <p class="sans"> Claro que o nosso maior presente é compartilhar com vocês este momento.
+        <p class=""> Claro que o nosso maior presente é compartilhar com vocês este momento.
           Uma vez que estamos em Dublin, não podemos pedir uma lista normal de presentes, então a solução
           é nos presentear em dinheiro.</p>
-        <p class="sans">Para dar um significado mais especial para os presentes recebidos, iremos doar
+        <p class="">Para dar um significado mais especial para os presentes recebidos, iremos doar
           10% do total que nos for presenteado para duas instituições que conhecemos e acreditamos, a
           <a href="https://www.facebook.com/Apaetenenteportela/" target="_blank">APAE Tenente Portela</a>, em
           Tenente Portela, e o <a href="https://www.facebook.com/larguanella/" target="_blank">Lar São Luís
@@ -131,25 +131,25 @@
 
       <div id="gift-options" class="section container-fluid px-5 py-5">
 
-        <h4 class="sans pt-3 text-center">Podemos ser presenteados de três modos:</h4>
+        <h4 class=" pt-3 text-center">Podemos ser presenteados de três modos:</h4>
 
           <div class="row px-5 py-4">
           <div class="col-md-4 ml-md-auto align-self-center pl-5">
             <h5 class="sans-bold">Online</h5>
-            <p class="sans">Presenteie-nos através do próprio website. É rápido, fácil e seguro.</p>
+            <p class="">Presenteie-nos através do próprio website. É rápido, fácil e seguro.</p>
               <a href="lista-presentes.html" class="btn btn_presente btn-primary sans-bold pink text-white align-self-center">Presentear</a>
             </div>
 
             <div class="col-md-4 ml-md-auto align-self-center pl-5">
               <h5 class="sans-bold mt-3">Transferência Bancária</h5>
-              <p class="sans">Presenteie-nos através de transferência ou depósito bancário.
+              <p class="">Presenteie-nos através de transferência ou depósito bancário.
 
               </p>
             </div>
 
             <div class="col-md-4 ml-md-auto align-self-center pl-5">
               <h5 class="sans-bold">No grande dia</h5>
-              <p class="sans">Você também pode colocar seu presente em um envelope e
+              <p class="">Você também pode colocar seu presente em um envelope e
                 nos entregar no grande dia.</p>
             </div>
           </div>
