--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
 
       <div id="gift-options" class="section container-fluid px-5 py-5">
 
-        <h4 class=" pt-3 text-center">Podemos ser presenteados de três modos:</h4>
+        <p class="blockquote pt-3 text-center">Podemos ser presenteados de três modos:</p>
 
           <div class="row px-5 py-4">
           <div class="col-md-4 ml-md-auto align-self-center pl-5">
