fixing dress code subtext

--- a/home.html
+++ b/home.html
@@ -90,8 +90,9 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon py-3" src="assets/icons/hat.png" alt="Icone chapéu"/>
         <h4 class="sans-h py-3">Dress Code</h4>
-        <p><span class="sans-bold">Traje Social ou Passeio Completo</span><br />
-          <span class="sans">Terno e gravata para os homens e vestidos de<br /> tecidos mais nobres para as mulheres</span></p>
+        <p class="sans-bold">Traje Social ou Passeio Completo<br />
+          <span class="sans">Terno e gravata para os homens e vestidos de<br />
+            tecidos mais nobres para as mulheres</span></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
