fixing o casamento subtext

--- a/home.html
+++ b/home.html
@@ -73,14 +73,14 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/church.png" alt="Icone igreja"/>
         <h4 class="sans-h py-3">Cerimônia 16:30</h4>
-        <p><span class="sans-bold">Igreja Sagrada Família</span><br />
+        <p class="sans-bold">Igreja Sagrada Família<br />
           <span class="sans">Rua José do Patrocínio, 954 - Cidade Baixa</span></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/glass.png" alt="Icone taças"/>
         <h4 class="sans-h py-3">Recepção 18:00</h4>
-        <p><span class="sans-bold">Sociedade de Engenharia do RS</span><br />
+        <p class="sans-bold">Sociedade de Engenharia do RS<br />
           <span class="sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
