--- a/home.html
+++ b/home.html
@@ -122,9 +122,7 @@
           Tenente Portela, e o <a href="https://www.facebook.com/larguanella/" target="_blank">Lar São Luís
           Guanella</a>, em Porto Alegre.</p>
           <button type="button" onclick="hideUnhide()" class="btn btn_presente sans-bold pink mt-2">Presenteie-nos</button>
-          <p id="gift-options-soon">Em breve!
-
-          </p>
+          <p id="gift-options-soon">Em breve!</p>
         </div>
         <div class="col-md-2 ml-md-auto"></div>
         <div class="col-md-4 ml-md-auto align-self-center">
