--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
         <img class="icon py-3" src="assets/icons/hat.png" alt="Icone chapéu"/>
         <h4 class="sans-h py-3">Dress Code</h4>
         <p class="sans-bold">Traje Social ou Passeio Completo<br />
-          <span class="sans">Terno e gravata para os homens e vestidos de<br />
+          <span class="sans">Terno e gravata para os homens e vestidos de
             tecidos mais nobres para as mulheres</span></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
@@ -99,7 +99,7 @@
         <img class="icon py-3" src="assets/icons/letter.png" alt="Icone carta"/>
         <h4 class="sans-h py-3">Confirmação de Presença</h4>
         <p class="sans-bold">Até 28 de Fevereiro</br>
-          <span class="sans">A confirmação de presença será até o dia 28/02/2019.<br />
+          <span class="sans">A confirmação de presença será até o dia 28/02/2019.
             Confirmações através do email xxxx@xxxx.xxx</span></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
