--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
     <!-- javascript -->
     <script type="text/javascript" src="script.js" defer></script>
@@ -21,8 +22,8 @@
 
 
     <nav id="navbar" class="">
-      <div class="toggle-nav">
-        <span class="hamburger">|||</span>
+      <div class="toggle-nav align-self-center">
+        <span class="hamburger align-self-center"><i class="fas fa-bars "></i></span>
       </div>
         <ul id="navbar-ul" class="">
           <li class=""><a class="text-uppercase" href="#cover">Home</a></li>
