--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 
     <nav id="navbar" class="">
       <div class="toggle-nav align-self-center">
-        <span class="hamburger align-self-center"><i class="fas fa-bars "></i></span>
+        <span class="hamburger align-self-center"><i class="fas fa-bars align-self-center"></i></span>
       </div>
         <ul id="navbar-ul" class="">
           <li class=""><a class="text-uppercase" href="#cover">Home</a></li>
