--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
 
   <div class="section container-fluid px-5 py-5" id="sobreNos">
 
-    <h1 class="pt-5 pb-2 pl-5">Os Noivos</h1>
+    <h1 id="osNoivos" class="pt-5 pb-2 pl-5">Os Noivos</h1>
     <div class="row align-self-center px-5">
       <div class="col-md-7 ml-md-auto align-self-center pl-5">
         <p class="">
@@ -74,14 +74,14 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/church.png" alt="Icone igreja"/>
         <h4 class="sans-h py-3">Cerimônia 16:30</h4>
-        <p class="sans-bold">Igreja Sagrada Família<br />
+        <p class="subtitle">Igreja Sagrada Família<br />
           <span class="sans">Rua José do Patrocínio, 954 - Cidade Baixa</span></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/glass.png" alt="Icone taças"/>
         <h4 class="sans-h py-3">Recepção 18:00</h4>
-        <p class="sans-bold">Sociedade de Engenharia do RS<br />
+        <p class="subtitle">Sociedade de Engenharia do RS<br />
           <span class="sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
@@ -91,7 +91,7 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon py-3" src="assets/icons/hat.png" alt="Icone chapéu"/>
         <h4 class="sans-h py-3">Dress Code</h4>
-        <p class="sans-bold">Traje Social ou Passeio Completo<br />
+        <p class="subtitle">Traje Social ou Passeio Completo<br />
           <span class="sans">Terno e gravata para os homens e vestidos de
             tecidos mais nobres para as mulheres</span></p>
       </div>
@@ -99,7 +99,7 @@
       <div class="col-md-4 ml-md-auto">
         <img class="icon py-3" src="assets/icons/letter.png" alt="Icone carta"/>
         <h4 class="sans-h py-3">Confirmação de Presença</h4>
-        <p class="sans-bold">Até 28 de Fevereiro</br>
+        <p class="subtitle">Até 28 de Fevereiro</br>
           <span class="sans">A confirmação de presença será até o dia 28/02/2019.
             Confirmações através do email xxxx@xxxx.xxx</span></p>
       </div>
