--- a/home.html
+++ b/home.html
@@ -42,9 +42,9 @@
 
   <div class="section container-fluid px-5 py-5" id="sobreNos">
 
-    <h1 id="osNoivos" class="pt-5 pb-2 pl-5">Os Noivos</h1>
+    <h1 class="pt-5 pb-3 pl-5">Os Noivos</h1>
     <div class="row align-self-center px-5">
-      <div class="col-md-7 ml-md-auto align-self-center pl-5">
+      <div class="col-md-7 ml-md-auto align-self-center">
         <p class="">
           Nos conhecemos no Rambla em 2015, em uma das comemorações de formatura da turma do Luis e
           não demorou muito para começarmos a namorar. Em menos de um ano de namoro, nosso primeiro desafio:
@@ -69,7 +69,7 @@
   <div class="section container-fluid px-5" id="oCasamento">
 
     <h1 class="mb-0 mt-5 pt-5 pb-3 pl-5 bkg">O Casamento</h1>
-    <div class="row pt-5 text-center bkg mx-0 px-4">
+    <div id="oCasamento-row1" class="row pt-5 text-center bkg mx-0 px-4">
       <div class="col-md-1 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/church.png" alt="Icone igreja"/>
@@ -113,7 +113,7 @@
 
     <h1 class="pt-5 pl-5">Lista de Presentes</h1>
     <div class="row px-5 py-4">
-      <div class="col-md-6 ml-md-auto align-self-center pl-5">
+      <div class="col-md-6 ml-md-auto align-self-center">
         <p class=""> Claro que o nosso maior presente é compartilhar com vocês este momento.
           Uma vez que estamos em Dublin, não podemos pedir uma lista normal de presentes, então a solução
           é nos presentear em dinheiro.</p>
