--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 
   <div id="cover" class="section">
     <!-- _____________________________ COVER IMAGE _____________________________ -->
-      <img id="mainCover" class="mx-auto d-block img-fluid" src="assets/mainpic_2.gif" alt="Uma foto do Luis e da Mari"/>
+      <!-- <img id="mainCover" class="mx-auto d-block img-fluid" src="assets/mainpic_2.gif" alt="Uma foto do Luis e da Mari"/> -->
   </div>
 
   <!-- _____________________________ SECTION 1 _____________________________ -->
