--- a/home.html
+++ b/home.html
@@ -21,9 +21,9 @@
   <body onresize="getSize()">
 
 
-    <nav id="navbar" class="">
-      <div class="toggle-nav align-self-center">
-        <span class="hamburger align-self-center"><i class="fas fa-bars align-self-center"></i></span>
+    <nav id="navbar" class="p-0 m-0">
+      <div class="toggle-nav align-self-center p-0">
+        <span class="hamburger align-self-center p-0"><i class="fas fa-bars align-self-center"></i></span>
       </div>
         <ul id="navbar-ul" class="">
           <li class=""><a class="text-uppercase" href="#cover">Home</a></li>
@@ -35,7 +35,7 @@
 
   <div id="cover" class="section">
     <!-- _____________________________ COVER IMAGE _____________________________ -->
-      <!-- <img id="mainCover" class="mx-auto d-block img-fluid" src="assets/mainpic_2.gif" alt="Uma foto do Luis e da Mari"/> -->
+      <img id="mainCover" class="mx-auto d-block img-fluid" src="assets/mainpic.gif" alt="Uma foto do Luis e da Mari"/>
   </div>
 
   <!-- _____________________________ SECTION 1 _____________________________ -->
