--- a/home.html
+++ b/home.html
@@ -158,6 +158,9 @@
           </div>
           </div>
 
+      <div id="gallery">
+
+      </div>
 
       <!-- _____________________________ FOOTER _____________________________ -->
       <div id="footer" class="section pt-5 pb-5 text-center">
