--- a/home.html
+++ b/home.html
@@ -30,6 +30,7 @@
           <li class=""><a class="text-uppercase" href="#sobreNos">Os Noivos</a></li>
           <li class=""><a class="text-uppercase" href="#oCasamento">O Casamento</a></li>
           <li class=""><a class="text-uppercase" href="#listaPresentes">Lista de Presentes</a></li>
+          <li class=""><a class="text-uppercase" href="padrinhos-madrinhas.html">Padrinhos</a></li>
         </ul>
     </nav>
 
@@ -122,7 +123,7 @@
           <a href="https://www.facebook.com/Apaetenenteportela/" target="_blank">APAE Tenente Portela</a>, em
           Tenente Portela, e o <a href="https://www.facebook.com/larguanella/" target="_blank">Lar São Luís
           Guanella</a>, em Porto Alegre.</p>
-          <button type="button" onclick="hideUnhide()" class="btn btn_presente sans-bold pink mt-2">Presenteie-nos</button>
+          <button type="button" onclick="hideUnhide()" class="btn btn_presente sans-bold pink mt-2" disabled>Em Breve</button>
           <p id="gift-options-soon">Em breve!</p>
         </div>
         <div class="col-md-2 ml-md-auto"></div>
