--- a/padrinhos-madrinhas.html
+++ b/padrinhos-madrinhas.html
@@ -2,46 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <title>Mariana e Luis</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
     <!-- javascript -->
     <script type="text/javascript" src="script.js" defer></script>
 
   </head>
 
-  <body>
+  <body onresize="getSize()">
 
 
-    <div id="main-container" class="section cover-container p-0 m-0">
-
-      <!-- navigation -->
-      <header id="navbar" class="navbar navbar-expand-sm navbar-light py-0 mx-auto align-self-center">
-        <button id="navbar-btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul id="navbar-ul" class="navbar-nav align-self-center mx-auto">
-            <li class="nav-item">
-              <a class="nav-link text-uppercase" href="home.html#sobreNos">Os Noivos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-uppercase" href="home.html#oCasamento">O Casamento</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-uppercase" href="home.html#listaPresentes">Lista de Presentes</a>
-            </li>
-          </ul>
-        </header>
-      </div>
-    </div>
+      <nav id="navbar" class="p-0 m-0">
+          <div class="toggle-nav align-self-center p-0">
+            <span class="hamburger align-self-center p-0"><i class="fas fa-bars align-self-center"></i></span>
+          </div>
+            <ul id="navbar-ul" class="">
+              <li class=""><a class="text-uppercase" href="home.html#cover">Home</a></li>
+              <li class=""><a class="text-uppercase" href="home.html#sobreNos">Os Noivos</a></li>
+              <li class=""><a class="text-uppercase" href="home.html#oCasamento">O Casamento</a></li>
+              <li class=""><a class="text-uppercase" href="home.html#listaPresentes">Lista de Presentes</a></li>
+              <li class=""><a class="text-uppercase" href="padrinhos-madrinhas.html">Padrinhos</a></li>
+            </ul>
+        </nav>
 
   <div class="section pt-3">
     <!-- _____________________________ COVER IMAGE _____________________________ -->
@@ -62,7 +53,7 @@
   </div>
 
 
-  <div class="container-fluid px-5 py-5" id="madrinhas_padrinhos">
+  <div class="section container-fluid px-5 py-5" id="madrinhas_padrinhos">
   <h1 class="sans-bold px-3 pt-5">A Missão dos Padrinhos</h1>
     <div class="row px-5 pt-5">
 
@@ -114,9 +105,9 @@
 
 <h1 class="sans-bold px-3 pt-5">No grande dia</h1>
     <div class="row px-5 py-5">
-      <div class="col-md-8 ml-md-auto align-self-center">
+      <div class="col-md-12 ml-md-auto align-self-center">
 
-        <ul class="sans">
+        <ul class="sans text-left">
           <li class="pb-2">
             Cheguem com 30 minutos de antecedência na Igreja
           </li>
@@ -136,10 +127,6 @@
         </ul>
 
       </div>
-      <div class="col-md-4 ml-md-auto pl-5">
-        <h1 class="sans-bold"></h1>
-        <img id="portico" class="imgs-padrinhos mx-auto d-block img-fluid" src="assets/portico.svg" alt="" />
-      </div>
     </div>
   </div>
 
@@ -150,12 +137,22 @@
     <span id="span-footer" class=" mx-auto sans-bold py-3 px-2">Copyright 2018, Mariana e Luis</span>
   </div>
 
-      <!-- Bootstrap core JavaScript ================================================== -->
+  <!-- Bootstrap core JavaScript ================================================== -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript">
+    //if the DOM is loaded
+    $(document).ready(function() {
+      $('nav ul').click(function () {
+        $(this).toggleClass('expand').css('display', '');
+      });
+      $('.hamburger').click(function () {
+        //400 is the speed in which it toggles
+        $('nav ul').slideToggle(400, function() {
+          $(this).toggleClass('expand').css('display', '');
+        });
+      });
+    });
+  </script>
 
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-      <!-- <script src="node_modules/popper.js/dist/umd/popper.min.js"></script> -->
-      <script src="dist/js/bootstrap.min.js"></script>
-
-    </body>
-  </html>
+</body>
+</html>
