--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 
   <div id="cover" class="section">
     <!-- _____________________________ COVER IMAGE _____________________________ -->
-      <img id="mainCover" class="img-fluid" src="assets/mainpic.gif" alt="Uma foto do Luis e da Mari"/>
+      <img id="mainCover" class="img-fluid" src="assets/mainpic.jpg" alt="Uma foto do Luis e da Mari"/>
   </div>
 
   <!-- _____________________________ SECTION 1 _____________________________ -->
