activating gifts button

--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
           entre fuso-horários de 4h, muitos Skypes e mensagens pelo WhatsApp, e MUITA saudade! Mas nosso
           relacionamento resistiu e amadureceu. Coincidência ou não, o pedido de casamento aconteceu em Barcelona,
           o Luis super se puxou e fez o pedido na Sagrada Família (a Mariana ficou toda boba).
-          E hoje nós podemos compartilhar com vocês com muita alegria que vamos nos casar e ainda com a bênção da Sagrada Família!
+          E hoje nós podemos compartilhar com vocês com muita alegria que vamos nos casar e ainda com a bênção de Deus e da Sagrada Família!
         </p>
       </div>
       <div class="col-md-5 ml-md-auto py-5 px-3">
@@ -123,8 +123,10 @@
           <a href="https://www.facebook.com/Apaetenenteportela/" target="_blank">APAE Tenente Portela</a>, em
           Tenente Portela, e o <a href="https://www.facebook.com/larguanella/" target="_blank">Lar São Luís
           Guanella</a>, em Porto Alegre.</p>
-          <button type="button" onclick="hideUnhide()" class="btn btn_presente sans-bold pink mt-2" disabled>Em Breve</button>
-          <p id="gift-options-soon">Em breve!</p>
+       <p>Nos presentear, porém, pode ser divertido. Decidimos criar uma lista de presentes virtual com cotas de luas de mel,
+          que serão convertidas em dinheiro.
+       </p>
+          <button type="button" onclick="location.href=''" class="btn btn_presente sans-bold pink mt-2">Presenteie-nos</button>
         </div>
         <div class="col-md-2 ml-md-auto"></div>
         <div class="col-md-4 ml-md-auto align-self-center">
