adjusting font-size issues with bootstrap

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 
   <div class="section container-fluid px-5 py-5" id="sobreNos">
 
-    <h1 class="pt-5 pb-3 pl-5">Os Noivos</h1>
+    <h1 id="osNoivos" class="pt-5 pb-3 pl-5">Os Noivos</h1>
     <div class="row align-self-center px-5">
       <div class="col-md-7 ml-md-auto align-self-center">
         <p class="">
@@ -67,7 +67,7 @@
 
   <!-- __________________________________ SECTION 2 __________________________________ -->
 
-  <div class="section container-fluid px-5" id="oCasamento">
+  <div class="section container-fluid px-5 py-0" id="oCasamento">
 
     <h1 class="mb-0 mt-5 pt-5 pb-3 pl-5 bkg">O Casamento</h1>
     <div id="oCasamento-row1" class="row pt-5 text-center bkg mx-0 px-4">
@@ -76,14 +76,14 @@
         <img class="icon pb-3" src="assets/icons/church.png" alt="Icone igreja"/>
         <h4 class="sans-h py-3">Cerimônia 16:30</h4>
         <p class="subtitle">Igreja Sagrada Família<br />
-          <span class="sans">Rua José do Patrocínio, 954 - Cidade Baixa</span></p>
+          <span class="sans">Rua José do Patrocínio, 954 - Cidade Baixa</span><br /><a href="https://goo.gl/maps/wCh1HXf6w752">Veja no mapa</a></p>
       </div>
       <div class="col-md-2 ml-md-auto"></div>
       <div class="col-md-4 ml-md-auto">
         <img class="icon pb-3" src="assets/icons/glass.png" alt="Icone taças"/>
         <h4 class="sans-h py-3">Recepção 18:00</h4>
         <p class="subtitle">Sociedade de Engenharia do RS<br />
-          <span class="sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span></p>
+          <span class="sans">Avenida Coronel Marcos, 163 - Pedra Redonda</span><br /><a href="https://goo.gl/maps/5vE95KiFVz42">Veja no mapa</a></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
     </div>
@@ -101,8 +101,8 @@
         <img class="icon py-3" src="assets/icons/letter.png" alt="Icone carta"/>
         <h4 class="sans-h py-3">Confirmação de Presença</h4>
         <p class="subtitle">Até 28 de Fevereiro</br>
-          <span class="sans">A confirmação de presença será até o dia 28/02/2019.
-            Confirmações através do email xxxx@xxxx.xxx</span></p>
+          <span class="sans">A confirmação de presença será até o dia 28/02/2019.<br />
+            <a href="https://marieluis.zankyou.com/br/seus-convidados/request-rsvp-by-guest">Confirmar presença</a></span></p>
       </div>
       <div class="col-md-1 ml-md-auto"></div>
     </div>
@@ -110,7 +110,7 @@
   </div>
 
   <!-- _____________________________ SECTION 3 _____________________________ -->
-  <div class="section container-fluid px-5 py-5" id="listaPresentes">
+  <div class="section container-fluid px-5" id="listaPresentes">
 
     <h1 class="pt-5 pl-5">Lista de Presentes</h1>
     <div class="row px-5 py-4">
@@ -135,31 +135,6 @@
 
       </div>
 
-      <div id="gift-options" class="section container-fluid px-5 py-5">
-
-        <p class="blockquote pt-3 text-center">Podemos ser presenteados de três modos:</p>
-
-          <div class="row px-5 py-4">
-          <div class="col-md-4 ml-md-auto align-self-center pl-5">
-            <h5 class="sans-bold">Online</h5>
-            <p class="">Presenteie-nos através do próprio website. É rápido, fácil e seguro.</p>
-              <a href="lista-presentes.html" class="btn btn_presente btn-primary sans-bold pink text-white align-self-center">Presentear</a>
-            </div>
-
-            <div class="col-md-4 ml-md-auto align-self-center pl-5">
-              <h5 class="sans-bold mt-3">Transferência Bancária</h5>
-              <p class="">Presenteie-nos através de transferência ou depósito bancário.
-
-              </p>
-            </div>
-
-            <div class="col-md-4 ml-md-auto align-self-center pl-5">
-              <h5 class="sans-bold">No grande dia</h5>
-              <p class="">Você também pode colocar seu presente em um envelope e
-                nos entregar no grande dia.</p>
-            </div>
-          </div>
-          </div>
 
       <div id="gallery">
 
