adjusting padrinhos page

--- a/padrinhos-madrinhas.html
+++ b/padrinhos-madrinhas.html
@@ -27,10 +27,8 @@
           </div>
             <ul id="navbar-ul" class="">
               <li class=""><a class="text-uppercase" href="home.html#cover">Home</a></li>
-              <li class=""><a class="text-uppercase" href="home.html#sobreNos">Os Noivos</a></li>
-              <li class=""><a class="text-uppercase" href="home.html#oCasamento">O Casamento</a></li>
-              <li class=""><a class="text-uppercase" href="home.html#listaPresentes">Lista de Presentes</a></li>
-              <li class=""><a class="text-uppercase" href="padrinhos-madrinhas.html">Padrinhos</a></li>
+              <li class=""><a class="text-uppercase" href="#madrinhas_padrinhos">Instruções</a></li>
+              <li class=""><a class="text-uppercase" href="#madrinhas_padrinhos2">No dia</a></li>
             </ul>
         </nav>
 
@@ -59,7 +57,7 @@
 
     <div class="col-md-7 ml-md-auto">
 
-    <p class="sans align-self-center px-5 py-5">Padrinhos e madrinhas testemunham e abençoam
+    <p class="sans align-self-center py-5">Padrinhos e madrinhas testemunham e abençoam
       o momento mais feliz e intenso na vida de um casal. Portanto, a missão dos padrinhos é aconselhar,
       visitar (mesmo no exterior, ok?), acompanhar e interceder por nossa jornada agora como uma família. Então não se esqueçam, dia
       06/04/19 contamos com vocês!
@@ -69,11 +67,11 @@
   <img id="calendar" class="imgs-padrinhos mx-auto d-block img-fluid" src="assets/calendar.png" alt=""/>
 </div>
 </div>
-  <h1 class="sans-bold pt-5 px-3 pb-2">O Dress Code</h1>
+  <h1 id="dresscode" class="sans-bold pt-5 px-3 pb-2">O Dress Code</h1>
     <div class="row px-5 ">
 
-    <div class="row pt-5 px-5">
-      <div class="col-md-6 ml-md-auto px-4">
+    <div class="row pt-5">
+      <div class="col-md-6 ml-md-auto pr-3">
         <h2 class="sans-bold pb-5">Madrinhas</h2>
         <p class="sans">
             Antes de mais nada queremos que vocês se sintam lindas, cada uma
@@ -83,7 +81,7 @@
         </p>
 
       </div>
-      <div class="col-md-6 ml-md-auto px-4">
+      <div class="col-md-6 ml-md-auto pl-3">
         <h2 class="sans-bold pb-5">Padrinhos</h2>
         <p class="sans">
             Para que vocês fiquem ainda mais bonitos, escolhemos padronizar os trajes dos padrinhos.
